# f-manager

./: .gitignore  LICENSE  README.md  config.py  exceptions.py  launcher.py  logger.py  mod.py  mods_profile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
f_manager/: __init__.py  _config.py  _exceptions.py  _helpers.py  _launcher.py  _mod.py  _profile.py  config.py  exceptions.py  factorioapi.py  helpers.py  launcher.py  logger.py  manager.py  mod.py  mods.py  mods_profile.py  profile.py  profiles.py  version.py
f_manager/config/: default_darwin.yaml  default_linux.yaml  default_windows.yaml
f_manager_core/: __init__.py  config.py  configuration.py  exceptions.py  helpers.py  launcher.py  logger.py  mod.py  profile.py
f_manager_core/configs/: config_linux.ini
f_manager_core/factorio/: __init__.py  api.py  const.py  exceptions.py  json_object_types.py
tests/: test_mods.py
