[metadata]
name = f_manager
version = 0.1
author = Viktor Bezuglov
author_email = viktory683@gmail.com
descriptioon = Base factorio manager library
long_description = file: README.md, LICENSE
keywords = factorio, mod, manager, game, mods
license = MIT

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    autopep8==2.0.1
    beautifulsoup4==4.11.1
    certifi==2022.12.7
    charset-normalizer==3.0.1
    environs==9.5.0
    flake8==6.0.0
    idna==3.4
    lxml==4.9.2
    marshmallow==3.19.0
    mccabe==0.7.0
    packaging==23.0
    pycodestyle==2.10.0
    pyflakes==3.0.1
    python-dotenv==0.21.1
    requests==2.28.2
    soupsieve==2.3.2.post1
    tomli==2.0.1
    urllib3==1.26.14